# featurehouse

./: .gitignore  .gitmodules  .travis.yml  INSTALLATION  README  build.xml
CIDE2_ast/: .project  FormsPlSql.jj
CIDE_generateAST/: .classpath  .project  GenASTNode.java  build.xml
CIDE_generateAST/test/: TestGrammar.gcide
fstcomp/: .classpath  .cvsignore  .project  FeatureHouse-0.1.jardesc  FeatureHouse-0.2.jardesc  FeatureHouse-0.3.jardesc  FeatureHouse-0.4.jardesc  FeatureHouse.jardesc
fstcomp/builder/: ArtifactBuilder.java  ArtifactBuilderInterface.java
fstcomp/composer/: CmdLineInterpreter.java  CompositionException.java  FSTGenComposer.java  FSTGenComposer.java.bak  FSTGenComposerExtension.java  FSTGenProcessor.java  FileLoader.java  ICompositionErrorListener.java  IParseErrorListener.java
fstcomp/counter/: Counter.java
fstcomp/examples/LayoutHaskell/Barracuda-1.0.2/: Barracuda.cabal  Main.hs  README  Tests.hs
fstcomp/examples/LayoutHaskell/Barracuda-1.0.2/Barracuda/: CertificateList.hs  ChannelList.hs  Distributor.hs  GUI.hs  LocalUserInfo.hs  PendingAck.hs  PendingAnonymous.hs  PendingKey.hs  PendingRoute.hs  RoutingTable.hs  ServerState.hs  TimedCollection.hs  Utils.hs
fstcomp/examples/LayoutHaskell/Barracuda-1.0.2/Barracuda/GUI/: CertificateLoader.hs  ChannelCreator.hs  ChannelList.hs  ChannelManager.hs  ChatView.hs  DownloadManager.hs  Infrastructure.hs  InputField.hs  ServerInterface.hs  UserList.hs  Utils.hs
fstcomp/examples/LayoutHaskell/Barracuda-1.0.2/Codec/Encryption/: PKCS1.hs
fstcomp/examples/LayoutHaskell/Barracuda-1.0.2/Data/: Heap.hs
fstcomp/examples/LayoutHaskell/Barracuda-1.0.2/Data/Char/: UTF8.hs
fstcomp/examples/LayoutHaskell/Barracuda-1.0.2/Network/AdHoc/: Channel.hs  Encryption.hs  Generator.hs  Message.hs  MessageID.hs  ParserStrict.hs  Routing.hs  Signature.hs  UserID.hs  XMLRenderer.hs
fstcomp/examples/LayoutHaskell/Barracuda-1.0.2/Tests/: Data.hs
fstcomp/examples/LayoutHaskell/Barracuda-1.0.2/Tests/HUnit/: ChannelList.hs  PendingAck.hs  RoutingTable.hs
fstcomp/examples/LayoutHaskell/Barracuda-1.0.2/Tests/QuickCheck/: Encryption.hs  Parser.hs  X509.hs
fstcomp/examples/LayoutHaskell/Barracuda-1.0.2/Text/ParserCombinators/Parsec/: XML.hs
fstcomp/examples/LayoutHaskell/Barracuda-1.0.2/hsgnutls/: crypt_helpers.c  helpers.c  hsgnutls.cabal
fstcomp/examples/LayoutHaskell/Barracuda-1.0.2/hsgnutls/Codec/: Encryption.chs
fstcomp/examples/LayoutHaskell/Barracuda-1.0.2/hsgnutls/Codec/Encryption/: Ciphers.hsc
fstcomp/examples/LayoutHaskell/Barracuda-1.0.2/hsgnutls/Network/: GnuTLS.hs
fstcomp/examples/LayoutHaskell/Barracuda-1.0.2/hsgnutls/Network/GnuTLS/: Attributes.hs  Errors.hsc  GnuTLS.chs  GnuTLSMonad.chs  IOWrap.hs  Internals.chs  OID.hsc  RefCount.hs  X509.chs
fstcomp/examples/LayoutHaskell/WSP-0.1.6_original/: Makefile  Setup.lhs  WSP.cabal
fstcomp/examples/LayoutHaskell/WSP-0.1.6_original/Webserver/: AccessLogger.hs  Compile.hs  Config.hs  ConfigParser.hs  Console.hs  ConsoleDeployment.hs  Deploy.hs  Deployment.hs  Dispatch.hs  ErrorLogger.hs  Global.hs  InitialDeployments.hs  Main.hs  MimeTypes.hs  ParseToken.hs  Request.hs  Response.hs  RunCGI.hs  Server.hs  State.hs  Util.hs
fstcomp/examples/LayoutHaskell/WSP-0.1.6_original/conf/: myconfig.conf
fstcomp/examples/LayoutHaskell/WSP-0.1.6_original/scripts/: CGICounter.hs  CalcFix.hs  CalcHistory.hs  HelloWorld.hs  Multi.hs  Multiplication.hs
fstcomp/examples/LayoutHaskell/ginsu-0.7.3/: Binary.hs  CWString.hsc  CacheIO.hs  Changelog  Charset.hs  CircularBuffer.hs  ConfigFile.hs  Curses.hsc  EIO.hs  ErrorLog.hs  ExampleConf.hs  FastMutInt.hs  Filter.hs  Format.hs  GenUtil.hs  GinsuConfig.hs  Help.hs  KeyHelpTable.hs  KeyName.hs  LICENSE  Main.hs  Makefile.am  Makefile.in  MyLocale.hsc  Options.hs  RSA.hsc  Regex.hs  SHA1.hs  Screen.hs  SimpleParser.hs  Status.hs  UArrayParser.hs  UTF8.hs  Version.hs  Version.hs.in  aclocal.m4  actions.def  config.h.in  configure  configure.ac  (+7 more)
fstcomp/examples/LayoutHaskell/ginsu-0.7.3/Boolean/: Algebra.hs  Boolean.hs
fstcomp/examples/LayoutHaskell/ginsu-0.7.3/Doc/: DocLike.hs
fstcomp/examples/LayoutHaskell/ginsu-0.7.3/Gale/: Gale.hs  KeyCache.hs  Proto.hs  Puff.hs
fstcomp/examples/LayoutHaskell/ginsu-0.7.3/ac-macros/: ac_caolan_check_package.m4  acincludepackage.m4  check_ssl.m4  check_zlib.m4  curses.m4  mp_with_curses.m4
fstcomp/examples/LayoutHaskell/ginsu-0.7.3/docs/: ginsu-manual.html  ginsu-manual.txt  ginsu.1  wiki.css
fstcomp/examples/LayoutHaskell/hircules-0.3/: ANNOUNCE  AUTHORS  COPYING  CTCP.hs  ChangeLog  Channel.hs  Config.hs  EntryArea.hs  GUI.hs  IRC.hs  LambdaBot.hs  LambdaBot.hsc  Main.hs  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  config.status  configure  configure.ac  hircules.spec  hircules.spec.in  index.html
fstcomp/examples/LayoutHaskell/hircules-0.3/lib/: Charset.hs  Debug.hs  Directories.hs  Display.hs  GdkKeys.hs  GtkKeymap.hs  Iconv.hs  MaybeDo.hs  TextBufferCreateTag.hs  Threads.hs  UTF8.hs  Version.hs  Version.hs.in  WordString.hs
fstcomp/metadata/: CompositionMetadataStore.java
fstcomp/modification/: Content.java  ContentModification.java  CustomFSTContent.java  ExplicitContent.java  FSTGenerator.java  FileFSTGenerator.java  ImplicitContent.java  IntroductionModification.java  InvalidFSTTraversalException.java  JavaMethodBodyOverrideModification.java  Modification.java  ModificationComposition.java  ParsedFSTContent.java  ParsedTraversalFSTContent.java  StringFSTGenerator.java  SuperimpositionModification.java  Test.java  UpdateFeatureNameModification.java
fstcomp/printer/: ArtifactPrintVisitor.java  FeaturePrintVisitor.java  PrintVisitorException.java  PrintVisitorInterface.java
fstcomp/run_configurations/: fstcomp Exprlang.launch  fstcomp MoBL.launch  fstcomp SDF.launch  fstcomp Stratego.launch  fstcomp Sudoko.launch  fstcomp TankWar.launch  fstcomp_Exprlang.launch  fstcomp_MoBL_Base_Async_HTML.launch  fstcomp_MoBL_Base_HTML.launch  fstcomp_Stratego.launch  (+9 more)
fstgen/: .classpath  .cvsignore  .project  model.colors  ttt.java
fstmerge/: .classpath  .project
(+25787 files in other folders)
