Name:		Barracuda
Version:	1.0.2
License:	GPL
Author:		Stephan Friedrichs
		Henning Günther
		Oliver Mielentz
		Martin Wegner
Stability:	stable
Homepage:	http://sep07.mroot.net/
Synopsis:	An ad-hoc chat program
Description:	An ad-hoc chat program developed in the software development course at the TU-Braunschweig
Build-Depends:	base,
		mtl,
		time,
		HaXml>=1.17,
		network,
		Crypto,
		gtk,
		regex-compat,
		parsec>=2.0,
		filepath>=1.0,
		hsgnutls==0.2.3-barracuda,
		stm>=2.0,
		unix
Extensions:
		FunctionalDependencies
Exposed-Modules:
		Codec.Encryption.PKCS1
		Network.AdHoc.Channel
		Network.AdHoc.Encryption
		Network.AdHoc.Generator
		Network.AdHoc.Message
		Network.AdHoc.MessageID
		Network.AdHoc.ParserStrict
		Network.AdHoc.Routing
		Network.AdHoc.Signature
		Network.AdHoc.UserID
		Network.AdHoc.XMLRenderer
		Barracuda.CertificateList
		Barracuda.ChannelList
		Barracuda.Distributor
		Barracuda.GUI
		Barracuda.GUI.CertificateLoader
		Barracuda.GUI.ChannelCreator
		Barracuda.GUI.ChannelList
		Barracuda.GUI.ChannelManager
		Barracuda.GUI.DownloadManager
		Barracuda.GUI.Infrastructure
		Barracuda.GUI.InputField
		Barracuda.GUI.UserList
		Barracuda.GUI.ServerInterface
		Barracuda.GUI.ChatView
		Barracuda.GUI.Utils
		Barracuda.LocalUserInfo
		Barracuda.PendingAck
		Barracuda.PendingAnonymous
		Barracuda.PendingKey
		Barracuda.PendingRoute
		Barracuda.RoutingTable
		Barracuda.ServerState
		Barracuda.TimedCollection
		Barracuda.Utils
		Data.Heap
		Text.ParserCombinators.Parsec.XML
ghc-options:	-fglasgow-exts -threaded -O2

Executable:	Barracuda
Main-Is:	Main.hs
ghc-options:	-fglasgow-exts -threaded -O2

