Name: WSP
Version: 0.1.6
License: BSD3
License-File: LICENSE
Author: Peter Thiemann
Copyright: Copyright 2005-2006, Peter Thiemann
Homepage: http://www.informatik.uni-freiburg.de/~thiemann/haskell/WASH/
Category: Web
Stability: Beta
Synopsis: WASH Server Pages extends the WASH EDSL by a server framework.
Build-Depends: base, text, haskell98, parsec, network, unix,
	WashNGo>=2.6, plugins>=0.9.10

Executable: hws-dynamic
Main-Is: Main.hs
Hs-Source-Dirs: Webserver
Extensions: CPP
